# superclient-python

./: .gitignore  DEVELOPMENT.md  Jenkinsfile  LICENSE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: release.yaml
examples/: __init__.py  confluent.py  json_generator.py  requirements.txt
examples/aiokafka/: aiven_kafka_example.py  apache.py  confluent_kafka_example.py  msk_producer_example.py
examples/asynciokafka/: kafka_producer_example.py
examples/confluent_kafka/: aiven.py  aiven_kafka_example.py  apache.py  confluent.py  confluent_kafka_example.py  msk.py  msk_kafka_example.py
examples/kafkapy/: aiven.py  aiven_kafka_example.py  apache.py  confluent.py  confluent_kafka_example.py  msk_kafka_example.py
superclient/: __init__.py  __main__.py  agent.py  install_pth.py  superclient-init.pth
superclient/agent/: __init__.py  clients.py  interceptor.py  metadata.py  patches.py  tracker.py
superclient/core/: manager.py  reporter.py
superclient/model/: messages.py
superclient/util/: config.py  logger.py  metrics.py  network.py
