[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superclient"
version = "1.0.0"
description = "Superstream optimisation library for Kafka producers"
authors = [{name = "Superstream Labs", email = "support@superstream.ai"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/superstreamlabs/superclient-python"

[tool.setuptools.package-data]
"superclient" = ["py.typed"] 