[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superstream-clients"
version = "0.1.0"
description = "Superstream optimisation library for Kafka producers"
authors = [{name = "Superstream Labs", email = "support@superstream.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "zstandard>=0.22.0",
    "python-snappy>=0.6.1",
    "lz4>=4.3.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/superstreamlabs/superclient-python"

[tool.setuptools]
packages = ["superclient", "superclient.agent", "superclient.core", "superclient.model", "superclient.util"]
include-package-data = true

[tool.setuptools.package-data]
"superclient" = ["py.typed", "*.pth"] 
